check exceptions